--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <p>New Website!!!! </p>
-  <!-- Project -->
+  <!-- Project hello is this working -->
   <script src="main.js"></script>
 </body>
 </html>
